# ASEN-5044-Project

./: MIGRATION_SUMMARY.md  README.md
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/logs/python_orocos_kdl/: build.make.000.log.stderr
ros2_ws/: .gitignore  CONTROL_NODES_GUIDE.md  README.md  SETUP_GUIDE.md  build_workspace.sh  quick_start.sh  ros2_deps.repos
ros2_ws/src/panda_ign_description/launch/: dual_panda_demo.launch.py
ros2_ws/src/panda_ign_description/panda/: panda.urdf
ros2_ws/src/panda_ign_description/worlds/: pick_and_place_ign.sdf
ros2_ws/src/pick_and_place/: package.xml  setup.py
ros2_ws/src/pick_and_place/launch/: panda_moveit_ign.launch.py  panda_pick_and_place.launch.py
ros2_ws/src/pick_and_place/pick_and_place/: controller.py  gui_end_effector.py  object_detector.py  pick_and_place_state_machine.py
ros2_ws/src/pick_and_place/scripts/: panda_ik_gui
ros2_ws/src/pick_and_place_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/pick_and_place_msgs/msg/: DetectedObject.msg  DetectedObjectsStamped.msg
src/pick_and_place/scripts/: object_detector.py
